--- a/rover/partials/reports/marketSegmentStatReport/rvMarketSegmentStatReport.html
+++ b/rover/partials/reports/marketSegmentStatReport/rvMarketSegmentStatReport.html
@@ -15,8 +15,7 @@
                 <tr class="top-row vertical-align">
                     <th class="date break">{{ chosenReport.singleValueDate | date : dateFormat }}</th>
                     <th colspan="3" class="break">
-                            <!-- Toggle class .on on switch -->
-                            <div class="switch-button on">
+                            <div class="switch-button on" ng-class='{"on" : isRoomRevenueSelected}' ng-click="toggleRevenue()">
                                 <input id="revenue-toggle" value="" type="checkbox" />
                                 <label class="data-off">
                                     <span class="value">Room Revenue</span>
@@ -30,7 +29,7 @@
                         </th>
                         <th colspan="3" class="break">
                             <!-- Toggle class .on on switch -->
-                            <div class="switch-button on">
+                            <div class="switch-button on" ng-class='{"on" : isBookingsSelected}' ng-click="toggleBookings()">
                                 <input id="bookings-toggle" value="" type="checkbox" />
                                 <label class="data-off">
                                     <span class="value">Bookings</span>
