--- a/rover/partials/reports/marketSegmentStatReport/rvMarketSegmentStatReportTotalRow.html
+++ b/rover/partials/reports/marketSegmentStatReport/rvMarketSegmentStatReportTotalRow.html
@@ -1,13 +1,21 @@
 <tr class="total">
    <td class="code break">Totals</td>
 
-     <td>{{ resultsTotalRow.revenue_today | currency:currencySymbol:2 }}</td>
-     <td>{{ resultsTotalRow.revenue_mtd | currency:currencySymbol:2 }}</td>
-     <td class="break">{{ resultsTotalRow.revenue_ytd | currency:currencySymbol:2 }}</td>
+     <td ng-show='isRoomRevenueSelected'>{{ resultsTotalRow.revenue_today | currency:currencySymbol:2 }}</td>
+     <td ng-show='isRoomRevenueSelected'>{{ resultsTotalRow.revenue_mtd | currency:currencySymbol:2 }}</td>
+     <td class="break" ng-show='isRoomRevenueSelected'>{{ resultsTotalRow.revenue_ytd | currency:currencySymbol:2 }}</td>
 
-     <td>{{ resultsTotalRow.bookings_today }}</td>
-     <td>{{ resultsTotalRow.bookings_mtd }}</td>
-     <td class="break">{{ resultsTotalRow.bookings_ytd }}</td>
+     <td ng-show='!isRoomRevenueSelected'>{{ resultsTotalRow.other_revenue_today | currency:currencySymbol:2 }}</td>
+     <td ng-show='!isRoomRevenueSelected'>{{ resultsTotalRow.other_revenue_mtd | currency:currencySymbol:2 }}</td>
+     <td class="break" ng-show='!isRoomRevenueSelected'>{{ resultsTotalRow.other_revenue_ytd | currency:currencySymbol:2 }}</td>
+
+     <td ng-show='isBookingsSelected'>{{ resultsTotalRow.bookings_today }}</td>
+     <td ng-show='isBookingsSelected'>{{ resultsTotalRow.bookings_mtd }}</td>
+     <td class="break" ng-show='isBookingsSelected'>{{ resultsTotalRow.bookings_ytd }}</td>
+
+     <td ng-show='!isBookingsSelected'>{{ resultsTotalRow.average_length_of_stay_today }}</td>
+     <td ng-show='!isBookingsSelected'>{{ resultsTotalRow.average_length_of_stay_mtd }}</td>
+     <td class="break" ng-show='!isBookingsSelected'>{{ resultsTotalRow.average_length_of_stay_ytd }}</td>
 
      <td>{{ resultsTotalRow.room_nights_today }}</td>
      <td>{{ resultsTotalRow.room_nights_mtd }}</td>
@@ -19,5 +27,5 @@
 
      <td>{{ resultsTotalRow.percentage_today }}%</td>
      <td>{{ resultsTotalRow.percentage_mtd }}%</td>
-     <td class="break">{{ resultsTotalRow.percentage_ytd }}%</td>  
+     <td class="break">{{ resultsTotalRow.percentage_ytd }}%</td>
 </tr>
