--- a/rover/partials/reports/marketSegmentStatReport/rvMarketSegmentStatReportRow.html
+++ b/rover/partials/reports/marketSegmentStatReport/rvMarketSegmentStatReportRow.html
@@ -37,9 +37,9 @@
 	<td ng-show='isBookingsSelected'>{{ each.bookings_mtd }}</td>
 	<td class="break" ng-show='isBookingsSelected'>{{ each.bookings_ytd }}</td>
 
-	<td ng-show='!isBookingsSelected'>{{ each.average_length_of_stay_today | number : 2}}</td>
-	<td ng-show='!isBookingsSelected'>{{ each.average_length_of_stay_mtd | number : 2}}</td>
-	<td class="break" ng-show='!isBookingsSelected'>{{ each.average_length_of_stay_ytd | number : 2}}</td>
+	<td ng-show='!isBookingsSelected'>{{ each.average_length_of_stay_today }}</td>
+	<td ng-show='!isBookingsSelected'>{{ each.average_length_of_stay_mtd }}</td>
+	<td class="break" ng-show='!isBookingsSelected'>{{ each.average_length_of_stay_ytd }}</td>
 
 	<td>{{ each.room_nights_today }}</td>
 	<td>{{ each.room_nights_mtd }}</td>
