--- a/rover/partials/nightlyDiary/rvNightlyDiary.html
+++ b/rover/partials/nightlyDiary/rvNightlyDiary.html
@@ -5,7 +5,7 @@
 
 <div ng-include="'/assets/partials/common/notification_message.html'"></div>
 
-<section id="diary-nightly" ng-class="{'diary-days-7': diaryData.isSevenSelected ,'diary-days-21': !diaryData.isSevenSelected }" class="content" role="main">
+<section id="diary-nightly" ng-class="{'diary-days-7': (diaryData.numberOfDays === 7) ,'diary-days-21': (diaryData.numberOfDays === 21) }" class="content" role="main">
 
     <div class="diary-nightly-main">
 
