CICO-33172 - print style update
Conflicts:
	app/assets/stylesheets/less/app/07_print.less

--- a/stylesheets/less/app/07_print.less
+++ b/stylesheets/less/app/07_print.less
@@ -2047,6 +2047,31 @@
                 }
 
                 &.medium-grid {
+                    thead {
+                        tr {
+                            th {
+                                .switch-button {
+                                     
+                                    .value,
+                                    input {
+                                        .hide();
+                                    }
+                                    
+                                    &:not(.on) {
+                                        .data-on {
+                                            .hide();
+                                        }
+                                    }
+
+                                    &.on {
+                                        .data-off {
+                                            .hide();
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    }
                     tbody {
                         tr {
                             &.grouped {
@@ -3686,3 +3711,5 @@
 ==========================================================*/
 /* 7. RESPONSIVE
 ==========================================================*/
+
+
