CICO-33172 - print style update

--- a/stylesheets/less/app/07_print.less
+++ b/stylesheets/less/app/07_print.less
@@ -1963,6 +1963,31 @@ table {
                 }
 
                 &.medium-grid {
+                    thead {
+                        tr {
+                            th {
+                                .switch-button {
+                                     
+                                    .value,
+                                    input {
+                                        .hide();
+                                    }
+                                    
+                                    &:not(.on) {
+                                        .data-on {
+                                            .hide();
+                                        }
+                                    }
+
+                                    &.on {
+                                        .data-off {
+                                            .hide();
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    }
                     tbody {
                         tr {
                             &.grouped {
