--- a/rover/partials/groups/roomBlock/rvGroupConfigurationRoomBlockTab.html
+++ b/rover/partials/groups/roomBlock/rvGroupConfigurationRoomBlockTab.html
@@ -161,8 +161,8 @@
                     <!-- Toggle class "hidden" when .line-toggle is clicked/tapped -->
                     <ul ng-class="{'hidden' : !roomtype_rate.isCollapsed}">
                         <!-- CICO-26729: Show for borrowed room type -->
-                        <li class="line" translate ng-hide="(roomtype_rate.can_edit) && !groupConfigData.summary.rate != -1 && roomtype_rate.rate_config.single_rate == null">SINGLE</li>
-                        <li class="line" translate ng-hide="(roomtype_rate.can_edit) && groupConfigData.summary.rate != -1 && roomtype_rate.rate_config.double_rate == null">DOUBLE</li>
+                        <li class="line" translate ng-hide="shouldHideSingleEntryRow()">SINGLE</li>
+                        <li class="line" translate ng-hide="shouldHideDoubleEntryRow()">DOUBLE</li>
                         <li class="line small add"
                             ng-if="roomtype_rate.can_edit && !shouldShowTripleEntryRow(roomtype_rate) && groupConfigData.summary.rate == -1"
                             ng-click="addTripleEntryRow(roomtype_rate)"
@@ -244,7 +244,7 @@
                         </div>
                         <!-- Single -->
                         <!-- <div class="line hidden"> -->
-                        <div class="line" ng-class="{'hidden' : !roomType.isCollapsed}" ng-hide="(roomtype_rate.can_edit) && groupConfigData.summary.rate != -1 && roomType.rate_config.single_rate == null">
+                        <div class="line" ng-class="{'hidden' : !roomType.isCollapsed}" ng-hide="shouldHideSingleEntryRow()">
                             <!-- Toggle class hidden when .line-toggle (L59) is clicked/tapped -->
                             <!-- we are not going behind ng-change, it will trigger everytime there is acharctr chnge, so we ae using our delay text box -->
                             <input tabindex="-1" type="text"
@@ -270,7 +270,7 @@
                         </div>
                         <!-- Double -->
                         <!-- <div class="line hidden"> -->
-                        <div class="line" ng-class="{'hidden' : !roomType.isCollapsed}" ng-hide="(roomtype_rate.can_edit) && groupConfigData.summary.rate != -1 && roomType.rate_config.double_rate == null">
+                        <div class="line" ng-class="{'hidden' : !roomType.isCollapsed}" ng-hide="shouldHideDoubleEntryRow()">
                             <!-- Toggle class hidden when .line-toggle (L59) is clicked/tapped -->
                             <input tabindex="-1" type="text"
                                 rv-delay-textbox
