CICO-34967 changing checkin and checkout settings save flow

--- a/admin/partials/checkin/adCheckin.html
+++ b/admin/partials/checkin/adCheckin.html
@@ -7,6 +7,7 @@
         </header>
         <section class="content-scroll">
             <div ng-include="'/assets/partials/common/notification_message.html'"></div>
+            <div ng-include="'/assets/partials/common/notification_success_message.html'"></div>
             <form style="overflow-y:auto;" class="form float">
                 <fieldset class="holder left">
                     <ad-toggle-button is-checked="checkinData.is_send_alert_flag" label="{{ 'SEND_CHECKIN_ALERT' | translate}}"></ad-toggle-button>
