--- a/admin/partials/checkout/adCheckout.html
+++ b/admin/partials/checkout/adCheckout.html
@@ -6,6 +6,7 @@
 		</header
 >		<section class="content-scroll">
 					<div ng-include="'/assets/partials/common/notification_message.html'"  ></div>
+					<div ng-include="'/assets/partials/common/notification_success_message.html'"  ></div>
 					<form style="overflow-y:auto;" name="edit-social-lobby" method="post" class="form float">
 						<fieldset>
 							<div class="entry full-width">
