fixed the issue

--- a/stylesheets/less/app/07_print.less
+++ b/stylesheets/less/app/07_print.less
@@ -368,6 +368,10 @@
         tr.hidden {
             display: table-row !important;
         }
+
+        tr.hide-row {
+            display: none;
+        }
     }
 
 /* Search                   ==============================*/
