--- a/stylesheets/less/app/screens/01.availability.less
+++ b/stylesheets/less/app/screens/01.availability.less
@@ -421,5 +421,9 @@
         &.availability-open { #availability > .open(); }
         
         &.availability-closing { #availability > .close(); }
+
+        .hide-row {
+            .hide;
+        }
     }
 }
