--- a/rover/partials/availability/roomAvailabilityGridStatus.html
+++ b/rover/partials/availability/roomAvailabilityGridStatus.html
@@ -34,35 +34,35 @@
 					</td>
 				</tr>
 				<!-- Inventory -->
-				<tr ng-class="{'hidden': !toggleStatusOf.occupancy }" ng-click="toggleRoomInventory()">
+				<tr ng-class="{'hide-row': !toggleStatusOf.occupancy }" ng-click="toggleRoomInventory()">
 					<th class="rows-toggle" scope="row" ng-class="{'active' : toggleStatusOf.roomInventory }">Rooms Inventory</th> <!-- TODO: toggle visibility of room types inventory -->
 					<td ng-repeat="inventory in data.inventory track by $index">
 						<div class="inner" ng-bind="inventory" ng-class="{ 'unavailable': 0 >= inventory, 'warning': 5 >= inventory}"></div>
 					</td>
 				</tr>
 
-				<tr class="italic" ng-class="{'hidden': !toggleStatusOf.roomInventory || !toggleStatusOf.occupancy}" ng-repeat="roomType in data.roomTypes track by $index">
+				<tr class="italic" ng-class="{'hide-row': !toggleStatusOf.roomInventory || !toggleStatusOf.occupancy}" ng-repeat="roomType in data.roomTypes track by $index">
 					<th scope="row" ng-bind="roomType.name"></th>
 					<td ng-repeat="eachDate in data.dates">
 						<div class="inner" ng-bind="roomType.rooms_inventory"></div>
 					</td>
 				</tr>
 				<!-- OOO -->
-				<tr ng-class="{'hidden': !toggleStatusOf.occupancy }" ng-if="!isHourlyRateOn">
+				<tr ng-class="{'hide-row': !toggleStatusOf.occupancy }" ng-if="!isHourlyRateOn">
 					<th scope="row">OOO Rooms</th>
 					<td ng-repeat="outOfOrderRoom in data.outOfOrder track by $index">
 						<div class="inner" ng-bind="outOfOrderRoom"></div>
 					</td>
 				</tr>
 				<!-- Rooms to Sell -->
-				<tr ng-class="{'hidden': !toggleStatusOf.occupancy }">
+				<tr ng-class="{'hide-row': !toggleStatusOf.occupancy }">
 					<th scope="row">Rooms To Sell</th>
 					<td ng-repeat="roomToSell in data.roomToSell track by $index">
 						<div class="inner" ng-bind="roomToSell"></div>
 					</td>
 				</tr>
 				<!-- Best Available Rate -->
-				<tr ng-class="{'hidden': !toggleStatusOf.occupancy }" ng-if="!isHourlyRateOn && !hideRateOfDay">
+				<tr ng-class="{'hide-row': !toggleStatusOf.occupancy }" ng-if="!isHourlyRateOn && !hideRateOfDay">
 					<th scope="row">Best Available Rate</th>
 					<td ng-repeat="bar in data.additionalData.bestAvailabilityRate track by $index">
 						<div class="inner" ng-if="bar == 'C'">C</div>
@@ -86,7 +86,7 @@
 					</td>
 				</tr>
 				<!-- Room types -->
-				<tr class="italic" ng-class="{'hidden': !toggleStatusOf.availableRooms, 'different': data.additionalData.roomTypeNames[$index].is_suite}" ng-repeat="roomTypeWiseDetail in data.additionalData.roomTypeWiseDetails track by $index">
+				<tr class="italic" ng-class="{'hide-row': !toggleStatusOf.availableRooms, 'different': data.additionalData.roomTypeNames[$index].is_suite}" ng-repeat="roomTypeWiseDetail in data.additionalData.roomTypeWiseDetails track by $index">
 					<th scope="row" ng-bind="data.additionalData.roomTypeNames[$index].name"></th>
 
 					<td ng-repeat="roomType in roomTypeWiseDetail track by $index">
@@ -110,13 +110,13 @@
 					</td>
 				</tr>
 				<!-- Adults / Children -->
-				<tr ng-class="{'hidden': !toggleStatusOf.roomsSold }">
+				<tr ng-class="{'hide-row': !toggleStatusOf.roomsSold }">
 					<th scope="row">Adults / Children</th>
 					<td ng-repeat="count in data.additionalData.adultsChildrenCounts track by $index">
 						<div class="inner" ng-bind="count.bothCount"></div>
 					</td>
 				</tr>
-				<tr class="italic" ng-if="!isHourlyRateOn" ng-class="{'hidden': !toggleStatusOf.roomsSold , 'different': data.additionalData.roomTypeNames[$index].is_suite}" ng-repeat="roomTypeWiseDetail in data.additionalData.roomTypeWiseDetails track by $index">
+				<tr class="italic" ng-if="!isHourlyRateOn" ng-class="{'hide-row': !toggleStatusOf.roomsSold , 'different': data.additionalData.roomTypeNames[$index].is_suite}" ng-repeat="roomTypeWiseDetail in data.additionalData.roomTypeWiseDetails track by $index">
 					<th scope="row" ng-bind="data.additionalData.roomTypeNames[$index].name" ></th>
 					<td ng-repeat="roomType in roomTypeWiseDetail track by $index">
 						<div class="inner" ng-bind="roomType.sold"></div>
@@ -161,7 +161,7 @@
 						<div class="inner">{{ cellData.total_number_of_rooms_blocked }}</div>
 					</td>
 				</tr>
-				<tr ng-class="{'hidden': !showShowGroupAllotmentTotals}">
+				<tr ng-class="{'hide-row': !showShowGroupAllotmentTotals}">
 					<th scope="row">Group Picked Up</th>
 					<td ng-repeat="groupPickedUp in data.gridDataForGroupAvailability.groupTotalPickedUps track by $index">
 						<div class="inner">{{ groupPickedUp }}</div>
@@ -174,7 +174,7 @@
 						<div class="inner">{{ cellData.total_number_of_rooms_blocked }}</div>
 					</td>
 				</tr>
-				<tr ng-class="{'hidden': !showShowGroupAllotmentTotals}">
+				<tr ng-class="{'hide-row': !showShowGroupAllotmentTotals}">
 					<th scope="row">Allotment Picked Up</th>
 					<td ng-repeat="allotmentPickedUp in data.gridDataForAllotmentAvailability.groupTotalPickedUps track by $index">
 						<div class="inner">{{ allotmentPickedUp }}</div>
