--- a/stylesheets/less/app/04_layout.less
+++ b/stylesheets/less/app/04_layout.less
@@ -329,7 +329,7 @@ body { overflow: hidden; }
 		z-index: 99;
 		.show;
 		.background(@white);
-		.box-shadow(0 1px 2px rgba(0,0,0,.1));
+		.box-shadow(0 1px 2px 1px rgba(0,0,0,.1));
 
 		h1 {
 			font-size: 18px;
