--- a/stylesheets/less/admin/05-B_forms.less
+++ b/stylesheets/less/admin/05-B_forms.less
@@ -149,6 +149,13 @@
                         margin-bottom: 10px;
                         text-transform: none;
                     }
+
+                    &.checkbox-with-label{
+                        line-height: 40px;
+                        span.icon-form{
+                            margin-top: 10px;
+                        }
+                    }
                 }
 
                 &.status {
