--- a/admin/partials/interfaces/ExternalMappings/adExternalMappingsEdit.html
+++ b/admin/partials/interfaces/ExternalMappings/adExternalMappingsEdit.html
@@ -15,7 +15,9 @@
             </fieldset>
             <fieldset class="holder left">
                 <ad-dropdown-name savemodel="mapping.mapping_type"
+                                  is-disabled="true"
                                   valueproperty="name"
+                                  label-in-drop-down="Select Mapping Type"
                                   property="text"
                                   list="mappingTypes"
                                   label="{{'MAPPING_TYPE'| translate}}"
@@ -24,6 +26,8 @@
             </fieldset>
             <fieldset class="holder left">
                 <ad-dropdown-name savemodel="mapping.snt_value"
+                                  is-disabled="true"
+                                  label-in-drop-down="Select Value"
                                   valueproperty="description"
                                   property="name"
                                   list="sntValues"
