CICO-25019 initial admin changes

--- a/admin/css/styles_ng_admin.css.less
+++ b/admin/css/styles_ng_admin.css.less
@@ -245,3 +245,9 @@
 .first-letter-capitalize {
   text-transform: capitalize;
 }
+
+.expanded-menu-header{
+  background:#eee;
+  border-bottom:none !important;
+  padding:15px;
+}
