--- a/admin/partials/interfaces/ideas/adIdeasSetup.html
+++ b/admin/partials/interfaces/ideas/adIdeasSetup.html
@@ -2,117 +2,14 @@
     <ad-form-header-with-back-button cancel-action="goBackToPreviousState" form-title="IDEAS Setup"></ad-form-header-with-back-button>
     <section class="content-scroll">
         <div ng-include="'/assets/partials/common/notification_message.html'"></div>
-        <div class="form float">
-            <ad-form-title full-width="true" form-title="Configuration"></ad-form-title>
-            <fieldset class="holder left">
-                <ad-toggle-button is-checked="ideaSetup.enabled" label="{{'WINDSURFER_CRS_ACTIVATE_INACTIVATE'| translate}}"></ad-toggle-button>
-            </fieldset>
-            <fieldset class="holder left" ng-if="ideaSetup.enabled">
-                <ad-textbox required='yes' nputtype="text" value="ideaSetup.account_id" label="Account Id" styleclass="full-width"></ad-textbox>
-                <ad-textbox required='yes' inputtype="text" value="ideaSetup.email" label="Email" styleclass="full-width"></ad-textbox>
-            </fieldset>
-            <fieldset class="holder right" ng-if="ideaSetup.enabled">
-                <div class="entry has-datepicker">
-                    <label>
-                        {{'START_DATE' | translate}}
-                        <strong>*</strong>
-                    </label>
-                     <input type="text" class="range-datepicker" ui-date="datepicker.options" ng-model="ideaSetup.start_date" readonly>
-                </div>
-                <div class="full-width entry">
-                    <ad-textbox inputtype="number" value="ideaSetup.days_past" label="Past Days"></ad-textbox>
-                    <ad-textbox inputtype="number" value="ideaSetup.days_future" label="Future Days"></ad-textbox>
-                </div>
-            </fieldset>
-            <fieldset ng-if="ideaSetup.enabled" class="holder full-width">
-                <div class="form-title">
-                    <h3>
-                        <span>Charge Groups</span>
-                    </h3>
-                    <em class="status">
-                        <span>Select at least one Charge Group</span>
-                    </em>
-                </div>
-                <div class="entry has-sortable">
-                    <label class="center_align"><em class="rate_roomtype_text">Available Charge Groups</em></label>
-
-                    <ul class="boxes sortable ui-sortable short-list" data-type="source" data-drop="true"
-                        ng-model="ideaSetup.available_charge_groups" style="overflow-y: scroll !important;"
-                        jqyoui-droppable="{multiple:true, onOver: 'onUnSelectChargeGroup'}" data-j qyoui-options="{accept:'.selected_reports'}">
-
-                        <li ng-repeat="chargeGroup in ideaSetup.available_charge_groups"
-                            data-drag="true"
-                            ng-model="ideaSetup.available_charge_groups"
-                            jqyoui-draggable="{index: {{$index}}, animate:false, onStart:'hideCurrentDragItem', onStop:'showCurrentDragItem' }"
-                            data-jqyoui-options="{revert: 'invalid', helper:'clone',appendTo: 'body'}"
-                            class="available-reports li-draggable"
-                            ng-click="chooseAvailableChargeGroup($index)"
-                            ng-class='{selected: chosenAvailableChargeGroups.indexOf($index) > -1}'>
-
-                            <span class="icons icon-handle"></span>
-                            <span class="icons icon-handle"></span>
-                            {{ chargeGroup }}
-                        </li>
-                    </ul>
-                </div>
-                <div class="entry movers rates_mover">
-                    <span class="top_mover">
-                        <span class="icons icon-mover-right to-target"
-                              data-type="target"
-                              ng-click="selectChosen()"
-                              ng-class="{active: chosenAvailableChargeGroups.length >= 1}"
-                              data-type="source">
-                            Select Report(s)
-                        </span>
-                        <span class="icons icon-mover-left to-source"
-                              data-type="source"
-                              ng-click="unSelectChosen()"
-                              ng-class="{active: chosenSelectedChargeGroups.length >= 1}">
-                            Un-select Report(s)
-                        </span>
-                    </span>
-                    <span>
-                        <div class="green_gradient icons">
-                            <span class="active to-source green_mover icons_rates"
-                                  data-type="source"
-                                  ng-click="selectAll()">
-                                Select Report(s)
-                            </span>
-                        </div>
-                        <div class="red_gradient icons">
-                            <span class="active to-target  red_mover icons_rates"
-                                  data-type="target"
-                                  ng-click="unSelectAll()">
-                                Un-select Report(s)
-                            </span>
-                        </div>
-                    </span>
-                </div>
-                <div class="entry has-sortable">
-                    <label class="center_align">
-                        <span class="assigned_room_text">Selected Charge Group</span></label>
-                    <ul class="boxes sortable ui-sortable short-list"
-                        data-type="target"
-                        data-drop="true"
-                        ng-model="ideaSetup.selected_charge_groups"
-                        jqyoui-droppable="{multiple:true, onOver: 'onSelectChargeGroup'}"
-                        data-jqyoui-options="{accept:'.available-reports'}">
-                        <li ng-repeat="chargeGroup in ideaSetup.selected_charge_groups"
-                            ng-click="chooseSelectedChargeGroup($index)"
-                            ng-class='{selected: chosenSelectedChargeGroups.indexOf($index) > -1}'
-                            class="selected-reports li-draggable"
-                            data-jqyoui-options="{revert: 'invalid', helper:'clone',appendTo: 'body'}"
-                            data-drag="true"
-                            ng-model="ideaSetup.selected_charge_groups"
-                            jqyoui-draggable="{index: {{$index}}, animate:false, onStart:'hideCurrentDragItem', onStop:'showCurrentDragItem' }">
-                            <span class="icons icon-handle"></span>
-                            <span class="icons icon-handle"></span>
-                            {{ chargeGroup }}
-                        </li>
-                    </ul>
-                </div>
-            </fieldset>
-            <ad-save-cancel-area save-action="saveSetup" cancel-action="goBackToPreviousState"></ad-save-cancel-area>
-        </div>
+         <table class="grid">
+            <!-- Render Rate Details View -->
+            <tr>
+                <td ng-include="'/assets/partials/interfaces/ideas/adIdeasImport.html'"></td>
+            </tr>
+            <tr>
+                <td ng-include="'/assets/partials/interfaces/ideas/adIdeasExport.html'"></td>
+            </tr>
+        </table>
     </section>
 </div>
