--- a/admin/partials/interfaces/CRS/adCRSCommonSetup.html
+++ b/admin/partials/interfaces/CRS/adCRSCommonSetup.html
@@ -43,6 +43,9 @@
                 </button>
             </div>
         </fieldset>
+        <fieldset class="holder right">
+            <ad-checkbox ng-repeat="item in sync.items" is-checked="item.isSelected" label="{{item.id | uppercase}}" div-class="full-width" ></ad-checkbox>
+        </fieldset>
     </fieldset>
 
     <fieldset class="holder full-width">
